# OpenEnv

./: .env.example  .gitignore  DELIVERY_SUMMARY.md  Dockerfile  FILE_STRUCTURE.md  GETTING_STARTED.md  INDEX.md  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  space.yaml  test_environment.py  verify_setup.py
env/: __init__.py  environment.py  grader.py  models.py  tasks.py  utils.py
server/: __init__.py  app.py
tests/: test_reward_shaping.py
